--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	arduino-libraries/SD@^1.2.4
 	khoih-prog/RP2040_PWM@^1.7.0
 	khoih-prog/RPI_PICO_TimerInterrupt@^1.3.1
+	bblanchon/ArduinoJson@^6.21.3
